# extropian-render

./: CMakeLists.txt  LICENSE  README.md
include/exd/render/: camera.hpp  components.hpp  cubemap_texture.hpp  draw_data.hpp  graphics_context.hpp  mesh.hpp  mesh_gpu.hpp  mesh_manager.hpp  particle_volume.hpp  render.hpp  render_graph.hpp  renderer.hpp  shader_manager.hpp  systems.hpp  techniques.hpp  texture.hpp  texture_manager.hpp  uniform_value.hpp
include/ext/render/: draw_data.hpp  graphics_context.hpp  mesh.hpp  mesh_gpu.hpp  mesh_manager.hpp  particle_volume.hpp  render.hpp  renderer.hpp  shader_manager.hpp  techniques.hpp  texture.hpp  texture_manager.hpp  uniform_value.hpp
shaders/cubemap/: cubemap.frag  cubemap.vert
shaders/lambertian/: lambertian.frag  lambertian.vert
shaders/opengl/cubemap/: cubemap.frag  cubemap.vert
shaders/opengl/lambertian/: lambertian.frag
shaders/opengl/particle/: particle.frag  particle.vert
shaders/opengl/reflective/: reflective.frag
shaders/opengl/volume/: ray_march.frag  ray_march.vert
shaders/particle/: particle.frag  particle.vert
shaders/reflective/: reflective.frag  reflective.vert
shaders/volume/: ray_march.frag  ray_march.vert
src/: camera.cpp  material.cpp  render_graph.cpp  renderer.cpp
src/backend/null/: null_renderer.cpp
src/backend/opengl/: gl_cubemap.cpp  gl_mesh.cpp  gl_particle_volume.cpp  gl_renderer.cpp  gl_shader.cpp  gl_systems.cpp  gl_texture.cpp
src/vis/: isosurface.cpp  particle.cpp  slice.cpp  streamline.cpp  volume.cpp
